Transition btween home&catalog

--- a/sass/Navbar.sass
+++ b/sass/Navbar.sass
@@ -7,13 +7,16 @@
     display: flex
     align-items: center
     justify-content: center
+    z-index: 101
     .container
         display: flex
-        align-items: center
+        align-items: flex-start
         justify-content: space-between
         .logo
+            width: 10em
+            height: 8em
+            background-color: #fff
         .menu-icon
-            z-index: 101
             transition: all 0.4s ease
             .line
                 border-radius: 1em
