--- a/sass/index.sass
+++ b/sass/index.sass
@@ -19,3 +19,7 @@ $cream: #E3DED8
     width: 90%
     max-width: 105em
     // background-color: rgba(244,23,12,0.4)
+
+.link
+    text-decoration: none
+    color: inherit
