--- a/sass/Mediaqueries.sass
+++ b/sass/Mediaqueries.sass
@@ -4,6 +4,7 @@
         .home
             .hero
                 .wrapper
+                    margin-top: 0
                     .title
                         font-size: 20vw
                         line-height: 1em
